--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "private": true,
     "version": "1.0.0",
     "type": "module",
-    "engines" : {
-        "npm" : ">=9.0.0",
-        "node" : ">=18.0.0"
+    "engines": {
+        "npm": ">=9.0.0",
+        "node": ">=18.0.0"
     },
     "scripts": {
         "dev": "vite --port 3000",
@@ -15,6 +15,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@typescript-eslint/parser": "^6.18.1",
         "clsx": "^2.0.0",
         "react": "^18.2.0",
         "react-countup": "^6.5.0",
@@ -22,13 +23,15 @@
         "react-fast-marquee": "^1.6.2"
     },
     "devDependencies": {
-        "@types/react": "^18.2.37",
-        "@types/react-dom": "^18.2.15",
+        "@types/node": "^20.11.0",
+        "@types/react": "^18.2.47",
+        "@types/react-dom": "^18.2.18",
         "@typescript-eslint/eslint-plugin": "^6.13.1",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.16",
         "eslint": "^8.53.0",
         "eslint-config-prettier": "^9.0.0",
+        "eslint-import-resolver-typescript": "^3.6.1",
         "eslint-plugin-import": "^2.29.0",
         "eslint-plugin-jsx-a11y": "^6.8.0",
         "eslint-plugin-prettier": "^5.0.1",
@@ -39,6 +42,7 @@
         "postcss": "^8.4.31",
         "prettier": "^3.1.0",
         "tailwindcss": "^3.3.5",
+        "typescript": "^5.3.3",
         "vite": "^5.0.0"
     }
 }
