--- a/package.json
+++ b/package.json
@@ -15,12 +15,17 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@ant-design/icons": "^5.2.6",
+        "@types/axios": "^0.14.0",
         "@typescript-eslint/parser": "^6.18.1",
+        "axios": "^1.3.3",
         "clsx": "^2.0.0",
         "react": "^18.2.0",
         "react-countup": "^6.5.0",
         "react-dom": "^18.2.0",
-        "react-fast-marquee": "^1.6.2"
+        "react-fast-marquee": "^1.6.2",
+        "react-query": "^3.39.3",
+        "react-router-dom": "^6.21.2"
     },
     "devDependencies": {
         "@types/node": "^20.11.0",
