--- a/package.json
+++ b/package.json
@@ -16,16 +16,21 @@
     },
     "dependencies": {
         "@ant-design/icons": "^5.2.6",
+        "@hookform/resolvers": "^3.3.4",
         "@types/axios": "^0.14.0",
         "@typescript-eslint/parser": "^6.18.1",
+        "antd": "^5.13.0",
         "axios": "^1.3.3",
         "clsx": "^2.0.0",
         "react": "^18.2.0",
         "react-countup": "^6.5.0",
         "react-dom": "^18.2.0",
         "react-fast-marquee": "^1.6.2",
+        "react-hook-form": "^7.49.3",
         "react-query": "^3.39.3",
-        "react-router-dom": "^6.21.2"
+        "react-router-dom": "^6.21.2",
+        "react-toastify": "^9.1.3",
+        "zod": "^3.22.4"
     },
     "devDependencies": {
         "@types/node": "^20.11.0",
