--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
         "paths": {
           "@homework-task/*": ["*"],
         },
+        "types": ["node", "vite/client"],
         "target": "ES6",
         "module": "ES2020",
         "jsx": "react-jsx",
